--- a/.gitignore
+++ b/.gitignore
@@ -124,11 +124,14 @@ celerybeat.pid
 # Environments
 .env
 .venv
+.myenv
 env/
 venv/
 ENV/
+myenv/
 env.bak/
 venv.bak/
+myenv.bak/
 
 # Spyder project settings
 .spyderproject
